# 8BallPool

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  performance.txt
Dataset/: README.md
Dataset/game1_clip1_1000_576/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
Dataset/game1_clip1_2048_1152/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
Dataset/game1_clip1_vertical/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
Dataset/game1_clip2_2048_1152/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
Dataset/game1_clip2_576_1024/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
Dataset/game1_clip2_900_576/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
Report/: main.aux  main.fdb_latexmk  main.fls  main.tex
Report/section/: ballsDetection.tex  conclusions.tex  elements.tex  executables.tex  introduction.tex  metrics.tex  minimap.tex  outputImages.tex  parts.tex  radiusAttempt.tex  results.tex  tableDetection.tex  tableSegmentation.tex  tracking.tex  video.tex  workload.tex
img/: minimap.h
include/: ObjectDetection.h  ball.h  category.h  constants.h  detection.h  imageRotation.h  imageStandardization.h  metrics.h  minimap.h  minimapConstants.h  segment.h  segmentation.h  table.h  tableOrientation.h  tracking.h  transformation.h  util.h
src/: ObjectDetection.cpp  ball.cpp  computePerformance.cpp  detection.cpp  imageRotation.cpp  imageStandardization.cpp  main.cpp  manipulateDataset.cpp  metrics.cpp  rotateBboxesFile.cpp  segment.cpp  segmentation.cpp  showBB.cpp  showSegmentationColored.cpp  table.cpp  tableOrientation.cpp  testAllClip.cpp  testAllFirstClip.cpp  testTrackingInteractive.cpp  tracking.cpp  transformation.cpp  util.cpp  util_first.cpp  util_second.cpp
